--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,5 @@
 ./samples/EcsSerialization/xcode/build/*
 ./samples/EcsRendering/xcode/build/*
 ./samples/EcsInteraction/xcode/build/*
-
+./samples/EcsRendering/xcode/build/*
 
